# sreejita-framework

./: CHANGELOG.md  CONTRIBUTING.md  EMERGENCY_KPI_FIX_CHECKLIST.md  IMPLEMENTATION_ROADMAP_FIXES_2_4_5_6_7.md  README.md  RETAIL_BIAS_AUDIT_AND_FIXES.md  config.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  generate_pdf.yml  package.yml
01_INTRO_AND_INTAKE/: client_intake_form.md  data_requirements_checklist.md
02_DATA_AUDIT/: data_audit.ipynb
03_DATA_PREP/: clean_data.py
04_EDA/: eda_template.ipynb
05_OUTPUT_TEMPLATES/: summary_report_template.md
FIXES_APPLIED_v1.2.md/: FIXES_APPLIED_v1.2.md
V1.2_COMPLETION_REPORT.md/: V1.2_COMPLETION_REPORT.md
V1.7_ROADMAP.md/: V1.7_ROADMAP.md
examples/: automation_config.yaml  retail_config.yaml  test_healthcare_detection.py
sreejita/: __init__.py  bootstrap.py  cli.py  executive.py
sreejita/automation/: __init__.py  batch_runner.py  file_watcher.py  retry.py  run_metadata.py  scheduler.py
sreejita/config/: __init__.py  defaults.py  domain_config.py  loader.py
sreejita/core/: __init__.py  benchmarks.py  capabilities.py  cleaner.py  column_resolver.py  composite_engine.py  dataset_shape.py  decision.py  decision_snapshot.py  fingerprint.py  insight_guardrails.py  insight_semantics.py  insights.py  kpi_contracts.py  kpi_normalizer.py  kpi_selector.py  kpi_utils.py  kpi_value_normalizer.py  kpis.py  policy.py  profiler.py  recommendation_enforcer.py  recommendations.py  schema.py  schema_profiler.py  subdomain_engine.py  validator.py
sreejita/core/__init__.py/: __init__.py
sreejita/database/: __init__.py  run_history.py
sreejita/domains/: README.md  __init__.py  auto_register.py  base.py  bootstrap_v2.py  capability_base.py  column_mapping.py  contracts.py  customer.py  customer_value.py  ecommerce.py  finance.py  generic.py  healthcare.py  hr.py  manufacturing.py  marketing.py  operations.py  ops.py  registry.py  retail.py  router.py  router_dispatch.py  router_v2.py  shadow_diff.py  supply_chain.py  text.py
sreejita/domains/intelligence/: column_normalizer.py  detector_v2.py  (+2 more)
sreejita/examples/: config.yaml
sreejita/executive/: executive_cognition.py
sreejita/ml/: __init__.py  predictors.py
sreejita/monitoring/: __init__.py  metrics.py
sreejita/narrative/: benchmarks.py  calculators.py  composer.py  engine.py  executive_cognition.py  executive_summary.py  formatter.py  llm.py  rules.py  schema.py
sreejita/observability/: factory.py  hooks.py
sreejita/pdf_service/: app.py  renderer.py
sreejita/policy/: engine.py  rules.py
sreejita/reporting/: __init__.py  base.py  contracts.py  domain_expectations.py  formatters.py  generic_visuals.py  html_renderer.py  hybrid.py  insights.py  kpi_base_flexible.py  kpi_engine.py  kpis.py  orchestrator.py  pdf_renderer.py  recommendation_enricher.py  recommendations.py  registry.py  storytelling_layer.py  utils.py  visuals.py
sreejita/reports/: dynamic.py  executive.py  hybrid.py
sreejita/utils/: logger.py
sreejita/visuals/: categorical.py  correlation.py  distributions.py  formatters.py  time_series.py
tests/: conftest.py  test_automation_import.py  test_batch_runner.py  test_cli_smoke.py  test_decision_replay.py  test_domain_contracts.py  test_domain_decision.py  test_domains_import.py  test_file_watcher.py  test_policy_engine.py  test_scheduler.py
tests/regression/: test_domain_invariants.py  test_report_invariants.py  test_visual_invariants.py
ui/: README.md  app.py  backend.py  config.py
(+39 files in other folders)
