[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sreejita-framework"
version = "1.7.0"
description = "Universal Data Analytics & Reporting Engine with Pluggable Domain Modules"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Yeswanth Arasavalli", email = "contact@yeswantharasavalli.me"}
]
keywords = ["data-analytics", "reporting", "eda", "etl", "domain-modules", "data-science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "reportlab>=3.6.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=5.4",
    "apscheduler>=3.8.0",
    "watchdog>=2.1.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
]

docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/sreejitadatalabs/sreejita-framework"
"Bug Tracker" = "https://github.com/sreejitadatalabs/sreejita-framework/issues"
"Documentation" = "https://github.com/sreejitadatalabs/sreejita-framework/wiki"
"Source Code" = "https://github.com/sreejitadatalabs/sreejita-framework"

[project.scripts]
sreejita = "sreejita.cli:main"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.pytest.ini_options]
mintestversion = "6.0"
testpaths = ["tests"]
addopts = "-v --cov=sreejita --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
