[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "sreejita-framework"
version = "1.8.0"
description = "Sreejita Framework — Data Analytics Automation Platform"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "Sreejita Data Labs", email = "yeswanthdatalabs@gmail.com" }
]

keywords = [
  "data-analytics",
  "automation",
  "eda",
  "reporting",
  "freelancing",
  "ai"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "pandas",
  "numpy",
  "pyyaml",
  "matplotlib",
  "seaborn",
  "reportlab",
  "watchdog",
  "apscheduler",
  "scikit-learn"
]


[project.scripts]
sreejita = "sreejita.cli:main"
